objects/Service_Console_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for storing settings related to service console custom functionality.</description>
    <fields>
        <fullName>Open_Contact_as_a_subtab_of_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to open Contact as a subtab of Account on Case Queues functionality in service console.</description>
        <inlineHelpText>Select this to open Contact as a subtab of Account on Case Queues functionality in service console.</inlineHelpText>
        <label>Open Contact as a subtab of Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unread_Email_Refresh_Interval__c</fullName>
        <description>This field is used to store the Refresh Interval for Unread Email count on Case Pinned List page</description>
        <inlineHelpText>This field is used to store the Refresh Interval for Unread Email count on Case Pinned List page</inlineHelpText>
        <label>Unread Email Refresh Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unread_Email_Report_Name__c</fullName>
        <description>This field is used to store Report DeveloperName to be displayed on Unread Email Count.</description>
        <inlineHelpText>This field is used to store Report DeveloperName to be displayed on Unread Email Count.</inlineHelpText>
        <label>Unread Email Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Console Settings</label>
</CustomObject>